<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ChangePasswordActivity"
    android:orientation="vertical">

    <android:android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        layout_height="?actionBarSize"
        layout_width="wrap_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/opensbold"
            android:textColor="#FFFFFF"
            android:id="@+id/toolbar_title" />

    </android:android.support.v7.widget.Toolbar>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="25dp">


                    <EditText
                        android:id="@+id/oldpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittextstyle"
                        android:hint="@string/oldpass"
                        android:textColor="@color/editextcolor"
                        android:textColorHint="#848587"
                        android:paddingLeft="15dp"
                        android:fontFamily="@font/opensans"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="14dp"
                        android:layout_marginBottom="10dp"
                        android:inputType="textPassword"
                        android:shadowColor="#B8B8B8" />

                    <EditText
                        android:id="@+id/password1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#848587"
                        android:background="@drawable/edittextstyle"
                        android:hint="@string/newpass"
                        android:paddingLeft="15dp"
                        android:textColor="@color/editextcolor"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="14dp"
                        android:inputType="textPassword"
                        android:shadowColor="#B8B8B8" />

                    <EditText
                        android:id="@+id/confirmpassword1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/editextcolor"
                        android:textColorHint="#848587"
                        android:background="@drawable/edittextstyle"
                        android:hint="@string/confirmnewpass"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="14dp"
                        android:shadowRadius="2" />

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:paddingLeft="50dp"
                        android:paddingRight="50dp"
                        android:paddingBottom="5dp"
                        android:textSize="19dp"
                        android:background="@drawable/buttonbackgroun"
                        android:gravity="center|center_horizontal"
                        android:text="Change Now"
                        android:fontFamily="@font/opensbold"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

                </ScrollView>
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</LinearLayout>
