<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".SignupActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="25dp"
                android:layout_height="match_parent">



                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"/>



            </LinearLayout>


            <!--  <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="200dp">


                  <android.support.v4.view.ViewPager
                      android:id="@+id/viewpager1"
                      android:layout_width="match_parent"
                      android:layout_height="200dp">
                  </android.support.v4.view.ViewPager>




              </RelativeLayout>-->




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/opensbold"
            android:gravity="center"
            android:text="Get yourself engaged with us!"
            android:textColor="#FFFFFF"
            android:textSize="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">



          <!--  <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/avatar"/>-->
            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/editextcolor"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:fontFamily="@font/opensans"
                android:textColorHint="#848587"
                android:paddingRight="15dp"
                android:paddingBottom="8dp"
                android:shadowColor="#B8B8B8"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:textColor="@color/editextcolor"
                android:fontFamily="@font/opensans"
                android:hint="@string/Email"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="8dp"
                android:textColorHint="#848587"
                android:shadowColor="#B8B8B8" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/editextcolor"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:fontFamily="@font/opensans"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="8dp"
                android:textColorHint="#848587"
                android:shadowColor="#B8B8B8" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:textColor="@color/editextcolor"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:textColorHint="#848587"
                android:hint="@string/Confirm_Password"
                android:fontFamily="@font/opensans"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:shadowColor="#B8B8B8" />


            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:background="@drawable/buttonbackgroun"
                android:gravity="center"
                android:text="Register"
                android:fontFamily="@font/opensbold"
                android:textSize="19dp"
                android:textAllCaps="false"
                android:textColor="#e7e8ea" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="signin"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/opensans"
                android:gravity="center"
                android:padding="3dp"
                android:text="Already have an Account? "
                android:textColor="#e7e8ea"
                android:textSize="13dp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/opensbold"
                android:gravity="center"
                android:padding="3dp"
                android:text="Login here."
                android:textColor="#3daae0"
                android:textSize="14dp"/>


            </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
        </LinearLayout>


</LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>